--- a/index.html
+++ b/index.html
@@ -222,6 +222,9 @@
             </section>
         </div>
     </div>
+    <footer>
+        Feito por Thay.   ♡
+    </footer>
 <script src="lib/bootstrap.bundle.min.js"></script>    
 </body>
 </html>
