--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="tab-content">
                         <div class="tab-pane active" id="aba1">
                             <div class="row">
-                                <div class="col-4">
+                                <div class="col-sm-12 col-md-6 col-xl-3">
                                     <article class="card">
                                         <img src="./imagens/artista1.jpg"/>
                                         <div class="card-body">
@@ -89,7 +89,7 @@
                                         </div>
                                     </article>
                                 </div>
-                                <div class="col-4">
+                                <div class="col-sm-12 col-md-6 col-xl-3">
                                     <article class="card">
                                         <img src="./imagens/sza.jpg"/>
                                         <div class="card-body">
@@ -98,7 +98,7 @@
                                         </div>
                                     </article>
                                 </div>
-                                <div class="col-4">
+                                <div class="col-sm-12 col-md-6 col-xl-3">
                                     <article class="card">
                                         <img src="./imagens/billie.jpg"/>
                                         <div class="card-body">
@@ -111,7 +111,7 @@
                     </div>
                     <div class="tab-pane" id="aba2">
                         <div class="row">
-                            <div class="col-4">
+                            <div class="col-sm-12 col-md-6 col-xl-3">
                                 <article class="card">
                                     <img src="./imagens/clairo.jpg"/>
                                     <div class="card-body">
@@ -120,7 +120,7 @@
                                     </div>
                                 </article>
                             </div>
-                            <div class="col-4">
+                            <div class="col-sm-12 col-md-6 col-xl-3">
                                 <article class="card">
                                     <img src="./imagens/charli.jpg"/>
                                     <div class="card-body">
@@ -129,7 +129,7 @@
                                     </div>
                                 </article>
                             </div>
-                            <div class="col-4">
+                            <div class="col-sm-12 col-md-6 col-xl-3">
                                 <article class="card">
                                     <img src="./imagens/troye.jpg"/>
                                     <div class="card-body">
@@ -142,7 +142,7 @@
                     </div>
                     <div class="tab-pane" id="aba3">
                         <div class="row">
-                            <div class="col-4">
+                            <div class="col-sm-12 col-md-6 col-xl-3">
                                 <article class="card">
                                     <img src="./imagens/remi.jpg"/>
                                     <div class="card-body">
@@ -151,7 +151,7 @@
                                     </div>
                                 </article>
                             </div>
-                            <div class="col-4">
+                            <div class="col-sm-12 col-md-6 col-xl-3">
                                 <article class="card">
                                     <img src="./imagens/ryan.jpg"/>
                                     <div class="card-body">
@@ -160,7 +160,7 @@
                                     </div>
                                 </article>
                             </div>
-                            <div class="col-4">
+                            <div class="col-sm-12 col-md-6 col-xl-3">
                                 <article class="card">
                                     <img src="./imagens/bea.jpg"/>
                                     <div class="card-body">
